styles_index.css
#social{
	background-color: #2F2F2F;
}
#banner{
	background-color: #FFFFFF;
}
#navbar{
	background-color: #34BAC9;
}
body{
	background-color: #FEFBF1;
}
.pink-message{
	color: #EE7699;
}
.message{
	color: #A6BDCB;
}
.txt{
	text-align: center;
}
.txt-justify{
	text-align: justify;
}
.btn{
	background-color: #EE4674;
}
a{
	text-decoration: none;
	color: #FFFFFF;
}
.pagination1{
	color: #000000;
}
.border_top_color{
	border-top: thick solid #34BAC9;
}

